--- a/ex-01.md
+++ b/ex-01.md
@@ -45,17 +45,17 @@ In this task, you will fork a parent repository to your GitHub account, set up t
 
 1. On **Create a new fork** pane, leave everything as default and click on **Create fork**.
 
-   ![](./media/ex1img32.png)
+   ![](./media/Ex1.1T1S8.png)
    
    >**Note:** If you facing any issues using microsoft edge, please install chrome browser and continue further.
 
 1. Now you have successfully forked the repository to your GitHub Account.
 
-   ![](./media/ex1img33.png)
+   ![](./media/Ex1.1T1S9.png)
 
 1. On the repository page, select **Code (1)** and copy the **git URL (2)** using the copy option.
 
-   ![](./media/ex1img34.png)
+   ![](./media/Ex2.1T2S12.png)
 
 1. Once you copy the URL , open **Visual Studio Code** from the desktop.
 
@@ -77,8 +77,8 @@ In this task, you will fork a parent repository to your GitHub account, set up t
    git clone <URL>
    ```
 
-
    ![](./media/p1t1s14.png)
+
    >**&#128221;Note:** Make sure you replace the `<URL>` with the **Actual URL** that you have copied earlier.
 
    >**&#128161;Tip:** A clone in GitHub is a local copy of a repository that you download to your machine for development. It allows you to work on the project offline and push changes back to the original or a forked repository.
@@ -99,11 +99,11 @@ In this task, you will fork a parent repository to your GitHub account, set up t
 
    Username: <inject key="AzureAdUserEmail"></inject> and click on **Next**.
 
-   ![](./media/p1t1s17.1.png)
+   ![](./media/Ex1.1T1S17a.png)
 
    Password: <inject key="AzureAdUserPassword"></inject> and click on **Sign in**.
 
-   ![](./media/p1t1s17.2.png)
+   ![](./media/Ex1.1T1S17b.png)
 
 1. When prompts, click on **No, sign in to this app only** and continue.
 
@@ -119,10 +119,10 @@ In this task, you will fork a parent repository to your GitHub account, set up t
 
    ```
    az extension remove -n containerapp
-   az extension add --name containerapp --version 0.3.50
+   az extension add --name containerapp --version 1.3.0b1
    ```
 
-   ![](./media/p1t1s20.png)
+   ![](./media/Ex1.1T1S20.png)
 
 ## Task 2: Set up a configuration repository
 
@@ -157,13 +157,9 @@ In this task, you will create a private GitHub repository to securely store conf
 
    ![](./media/ex1img41.png)
 
-1. On the Developer settings pane, select **Tokens(Classic) (1)** and click on **Generate token (2)**. 
+1. On the Developer settings pane, select **Personal access tokens (1)** to extend drop-down menu, click on **Tokens (classic) (2)**, click on **Generate new token (3)** and select **Generate new token (classic) (4)**. 
 
-   ![](./media/ex1img42.png)
-
-1. After clicking on **Generate token**, select **Generate new token (classic)**.
-
-   ![](./media/p1t2s9.png)
+   ![](./media/Ex1.1T2S8.png)
 
 1. On the **New personal access token (classic)** page, provide **Note** as `java-microservices-pat-token` **(1)** and check the **repo (2)** option from the list. Scroll down to the end and click on **Generate token**.
 
