--- a/ex-01.md
+++ b/ex-01.md
@@ -99,11 +99,11 @@ In this task, you will fork a parent repository to your GitHub account, set up t
 
    Username: <inject key="AzureAdUserEmail"></inject> and click on **Next**.
 
-
+   ![](./media/Ex1.1T1S17a.png)
 
    Password: <inject key="AzureAdUserPassword"></inject> and click on **Sign in**.
 
-
+   ![](./media/Ex1.1T1S17b.png)
 
 1. When prompts, click on **No, sign in to this app only** and continue.
 
