--- a/ex-01.md
+++ b/ex-01.md
@@ -172,7 +172,7 @@ In this task, you will create a private GitHub repository to securely store conf
 
    >**&#128221;Note:** Make sure you note this token in a notepad. It will be used further in this lab.
 
-1. From the repository page of your **configuration repository** that you have created before, copy the **Git URL** using the **<> Code** option.
+1. From the repository page of **java-microservices-aca-config** that you have created before, copy the **Git URL** using the **<> Code** option.
 
    ![](./media/ex1img39.png)
 
@@ -607,7 +607,7 @@ In this task, you will create configuration server which uses the configuration 
 
 1. In the Container app environment's overview page, select **Services (1)** from the left menu, click on **+ Configure (2)** and select **Java component (3)**.
 
-      ![](./media/ex1img15.png)
+      ![](./media/Ex1.1T4S4.png)
 
 1. On **Configure Java component** page, select **Java component type** as **Config Server for Spring (1)**, **Java component name** as **myconfigserver** and click on **+ Add (3)** to add your config repository details. 
 
@@ -635,7 +635,7 @@ In this task, you will create configuration server which uses the configuration 
 
 1. Once the configuration is successfull, go back to the **Services** pane from the left menu, click on **+ Configure** and select **Java component**.
 
-      ![](./media/ex1img19.png)
+      ![](./media/Ex1.1T4S9.png)
 
 1. On **Configure Java component** page, provide the following details:
 
