--- a/ex-02.md
+++ b/ex-02.md
@@ -126,10 +126,10 @@ In this task, you will configure Application Insights to receive monitoring data
    echo $AI_CONNECTIONSTRING
    ```
 
-1. Since you will now be containerizing the different microservices, you will also need to create a new Azure Container Registry (ACR) instance for holding your container images.
+1. Since you will now be containerizing the different microservices, you will also need to create a new Azure Container Registry (ACR) instance for holding your container images. Edit MYACR as **acrpetclinics<inject key="DeploymentID" enableCopy="false" />** and run this command.
 
    ```
-   MYACR=acrpetclinic
+   MYACR=<MYACR>
 
     az acr create \
      -n $MYACR \
