--- a/ex-01.md
+++ b/ex-01.md
@@ -174,7 +174,7 @@ In this task, you will create a private GitHub repository to securely store conf
 
 1. From the repository page of **java-microservices-aca-config** that you have created before, copy the **Git URL** using the **<> Code** option.
 
-   ![](./media/ex1img39.png)
+   ![](./media/Ex2.1T2S10.png)
 
 1. Once you have copied the **Git URL** of the configuration repository, navigate back to **Git bash** terminal in your **Visual Studio Code** and run the following command to clone the repository.
 
